--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "suizumasahar01/bluesky_api_client",
     "description": "Bluesky API client for PHP.",
-    "version": "0.1.0",
-    "time": "2024-05-03",
+    "version": "0.1.1",
+    "time": "2024-05-04",
     "keywords": ["Bluesky API", "PHP", "Client"],
     "license": "MIT",
     "authors": [
@@ -13,7 +13,8 @@
     ],
     "require": {
         "php": "^8.1",
-        "guzzlehttp/guzzle": "^7.8"
+        "guzzlehttp/guzzle": "^7.8",
+        "ext-fileinfo": "*"
     },
     "autoload": {
         "psr-4": {
