--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.8",
-        "ext-fileinfo": "*"
+        "ext-fileinfo": "*",
+        "ext-libxml": "*",
+        "ext-dom": "*"
     },
     "autoload": {
         "psr-4": {
